// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wisCheckStatus function when encountering a server error should return fomatted report with message: Server error 1`] = `
Array [
  Object {
    "wis": Object {
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/777",
            "requestId": "758317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
Server error for request id: 758317
",
      "request": Object {
        "folderPath": "/a/b/c/777",
        "requestId": "758317",
      },
    },
  },
]
`;

exports[`wisCheckStatus function when passed a valid request should return fomatted report with one entry 1`] = `
Array [
  Object {
    "wis": Object {
      "json": Object {
        "Details": "http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%",
        "Images": "http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%",
        "Report": "http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%",
        "RequestID": 758317,
      },
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/111",
            "requestId": "758317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%
",
      "request": Object {
        "folderPath": "/a/b/c/111",
        "requestId": "758317",
      },
    },
  },
]
`;

exports[`wisCheckStatus function when passed an invalid request should return fomatted report with one message: Status unavailable 1`] = `
Array [
  Object {
    "wis": Object {
      "json": null,
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/444",
            "requestId": "838317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
Status unavailable for: 838317

",
      "request": Object {
        "folderPath": "/a/b/c/444",
        "requestId": "838317",
      },
    },
  },
]
`;

exports[`wisCheckStatus function when passed multiple invalid requests should return fomatted report with mutiple messages: Status unavailable 1`] = `
Array [
  Object {
    "wis": Object {
      "json": null,
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/555",
            "requestId": "838317",
          },
          Object {
            "folderPath": "/a/b/c/666",
            "requestId": "838317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
Status unavailable for: 838317

",
      "request": Object {
        "folderPath": "/a/b/c/555",
        "requestId": "838317",
      },
    },
  },
  Object {
    "wis": Object {
      "json": null,
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/555",
            "requestId": "838317",
          },
          Object {
            "folderPath": "/a/b/c/666",
            "requestId": "838317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
Status unavailable for: 838317

",
      "request": Object {
        "folderPath": "/a/b/c/666",
        "requestId": "838317",
      },
    },
  },
]
`;

exports[`wisCheckStatus function when passed multiple valid requests should return fomatted report with mutiple entrys 1`] = `
Array [
  Object {
    "wis": Object {
      "json": Object {
        "Details": "http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%",
        "Images": "http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%",
        "Report": "http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%",
        "RequestID": 758317,
      },
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/222",
            "requestId": "758317",
          },
          Object {
            "folderPath": "/a/b/c/333",
            "requestId": "758317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%
",
      "request": Object {
        "folderPath": "/a/b/c/222",
        "requestId": "758317",
      },
    },
  },
  Object {
    "wis": Object {
      "json": Object {
        "Details": "http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%",
        "Images": "http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%",
        "Report": "http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%",
        "RequestID": 758317,
      },
      "options": Object {
        "environment": "production",
        "password": "ocrp",
        "reportFolder": "/Users/frankg/Desktop/reports",
        "requests": Array [
          Object {
            "folderPath": "/a/b/c/222",
            "requestId": "758317",
          },
          Object {
            "folderPath": "/a/b/c/333",
            "requestId": "758317",
          },
        ],
        "server": "wis",
        "url": "https://www.wisinspections.com/wiswebservice.asmx?WSDL",
        "username": "2008prco",
      },
      "report": "
---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%
",
      "request": Object {
        "folderPath": "/a/b/c/333",
        "requestId": "758317",
      },
    },
  },
]
`;
